// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial screen 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                  "marginTop": 0,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityIgnoresInvertColors={true}
                        style={
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#fff",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <Image
                          source={1}
                          style={
                            Array [
                              Object {
                                "bottom": 0,
                                "left": 0,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              Object {
                                "height": undefined,
                                "width": undefined,
                              },
                              undefined,
                            ]
                          }
                        />
                        <View
                          onLayout={[Function]}
                          style={
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "#000000",
                              "justifyContent": "center",
                              "opacity": 0.7,
                              "padding": 16,
                            }
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "white",
                                },
                                Object {
                                  "alignSelf": "center",
                                  "fontSize": 18,
                                },
                              ]
                            }
                          >
                            Login
                          </Text>
                          <Text
                            style={
                              Object {
                                "color": "red",
                              }
                            }
                          >
                            
                          </Text>
                          <TextInput
                            onChangeText={[Function]}
                            placeholder="Email"
                            placeholderTextColor="#BEBEBE"
                            style={
                              Array [
                                Object {
                                  "alignSelf": "stretch",
                                  "borderBottomWidth": 2,
                                  "marginVertical": 8,
                                  "padding": 8,
                                },
                                Object {
                                  "borderBottomColor": "white",
                                },
                                Object {
                                  "color": "white",
                                },
                              ]
                            }
                            value=""
                          />
                          <TextInput
                            onChangeText={[Function]}
                            placeholder="Password"
                            placeholderTextColor="#BEBEBE"
                            secureTextEntry={true}
                            style={
                              Array [
                                Object {
                                  "alignSelf": "stretch",
                                  "borderBottomWidth": 2,
                                  "marginVertical": 8,
                                  "padding": 8,
                                },
                                Object {
                                  "borderBottomColor": "white",
                                },
                                Object {
                                  "color": "white",
                                },
                              ]
                            }
                            value=""
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "alignSelf": "stretch",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "marginVertical": 4,
                                },
                                Object {
                                  "marginTop": 16,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "color": "white",
                                }
                              }
                            >
                              Don't have an account? 
                            </Text>
                            <View
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#87F1FF",
                                  }
                                }
                              >
                                Sign Up
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "alignSelf": "stretch",
                                  "flexDirection": "row",
                                  "justifyContent": "center",
                                  "marginVertical": 4,
                                },
                                Object {
                                  "marginBottom": 16,
                                },
                              ]
                            }
                          >
                            <Text
                              style={
                                Object {
                                  "color": "white",
                                }
                              }
                            >
                              Forgotten your password? 
                            </Text>
                            <View
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <Text
                                style={
                                  Object {
                                    "color": "#87F1FF",
                                  }
                                }
                              >
                                Reset
                              </Text>
                            </View>
                          </View>
                          <View
                            accessibilityRole="button"
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "opacity": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {},
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#007AFF",
                                      "fontSize": 18,
                                      "margin": 8,
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "color": "#f7b267",
                                    },
                                  ]
                                }
                              >
                                Login
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "height": 44,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`Login screen 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#000000",
        "justifyContent": "center",
        "opacity": 0.7,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
          },
          Object {
            "alignSelf": "center",
            "fontSize": 18,
          },
        ]
      }
    >
      Login
    </Text>
    <Text
      style={
        Object {
          "color": "red",
        }
      }
    >
      
    </Text>
    <TextInput
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#BEBEBE"
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 2,
            "marginVertical": 8,
            "padding": 8,
          },
          Object {
            "borderBottomColor": "white",
          },
          Object {
            "color": "white",
          },
        ]
      }
      value=""
    />
    <TextInput
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#BEBEBE"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 2,
            "marginVertical": 8,
            "padding": 8,
          },
          Object {
            "borderBottomColor": "white",
          },
          Object {
            "color": "white",
          },
        ]
      }
      value=""
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginVertical": 4,
          },
          Object {
            "marginTop": 16,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "white",
          }
        }
      >
        Don't have an account? 
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#87F1FF",
            }
          }
        >
          Sign Up
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginVertical": 4,
          },
          Object {
            "marginBottom": 16,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "white",
          }
        }
      >
        Forgotten your password? 
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#87F1FF",
            }
          }
        >
          Reset
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "#f7b267",
              },
            ]
          }
        >
          Login
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ResetPassword screen 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#000000",
        "justifyContent": "center",
        "opacity": 0.7,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
          },
          Object {
            "alignSelf": "center",
            "fontSize": 18,
          },
        ]
      }
    >
      Reset Password
    </Text>
    <Text
      style={
        Object {
          "color": "red",
        }
      }
    >
      
    </Text>
    <TextInput
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#BEBEBE"
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 2,
            "marginVertical": 8,
            "padding": 8,
          },
          Object {
            "borderBottomColor": "white",
          },
          Object {
            "color": "white",
          },
        ]
      }
      value=""
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginVertical": 4,
          },
          Object {
            "marginBottom": 16,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "white",
          }
        }
      >
        Don't have an account? 
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#87F1FF",
            }
          }
        >
          Sign Up
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "#f7b267",
              },
            ]
          }
        >
          Reset Password
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SignUp screen 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#000000",
        "justifyContent": "center",
        "opacity": 0.7,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
          },
          Object {
            "alignSelf": "center",
            "fontSize": 18,
          },
        ]
      }
    >
      Sign Up
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "red",
          },
        ]
      }
    >
      
    </Text>
    <TextInput
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#BEBEBE"
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 2,
            "marginVertical": 8,
            "padding": 8,
          },
          Object {
            "borderBottomColor": "white",
          },
          Object {
            "color": "white",
          },
        ]
      }
      value=""
    />
    <TextInput
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#BEBEBE"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 2,
            "marginVertical": 8,
            "padding": 8,
          },
          Object {
            "borderBottomColor": "white",
          },
          Object {
            "color": "white",
          },
        ]
      }
      value=""
    />
    <TextInput
      onChangeText={[Function]}
      placeholder="Confirm Password"
      placeholderTextColor="#BEBEBE"
      secureTextEntry={true}
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "borderBottomWidth": 2,
            "marginVertical": 8,
            "padding": 8,
          },
          Object {
            "borderBottomColor": "white",
          },
          Object {
            "color": "white",
          },
        ]
      }
      value=""
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginVertical": 4,
          },
          Object {
            "marginBottom": 16,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "white",
          }
        }
      >
        Already have an account? 
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <Text
          style={
            Object {
              "color": "#87F1FF",
            }
          }
        >
          Login
        </Text>
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "#f7b267",
              },
            ]
          }
        >
          Sign Up
        </Text>
      </View>
    </View>
  </View>
</View>
`;
